<resources>
    <string name="app_name">BookstoreOhBookstore</string>

    <string name="category_overview">Overview</string>

    <string name="hint_book_name">Title</string>
    <string name="hint_book_title">Title</string>
    <string name="hint_book_price">Price</string>

    <string name="category_quantity">Quantity</string>

    <string name="supplier_name">Supplier</string>
    <string name="hint_supplier_name">Supplier</string>
    <string name="hint_supplier_phone">Supplier Phone</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_books">Delete All Books</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="bookstore_editor_add_book">Add a New Book</string>
    <string name="bookstore_editor_edit_book">Edit Book</string>

    <string name="supplier_phone">Supplier Phone Number</string>
    <string name="price_label">Price</string>
    <string name="price_unit">dollars</string>
    <string name="editor_insert_book_successful">Book saved!</string>
    <string name="editor_insert_book_failed">Error saving book</string>
    <string name="empty_view_title_text">There are no books entered yet</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="editor_update_book_failed">Book Update Failed</string>
    <string name="editor_update_book_successful">Book Updated Successfully</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="sale">Sale</string>
    <string name="quantity">Number of Books</string>
    <string name="call_to_order">Call Now to Order</string>
    <string name="lost_sale">Lost a Sale :(</string>
</resources>
